# repoutils

./: README.md  pyproject.toml
.github/workflows/: tests.yml
repoutils/: __init__.py  packages.py  release.py
tests/: test.py
