[tool.poetry]
name = "repoutils"
version = "1.0.0"
description = "Utilities for parsing repos."
authors = ["jaidan <ajaidan0@gmail.com>"]
license = "ML"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pydeb = {git = "https://github.com/luzproject/pydeb"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
